feat: Implement multi-state application flow and enhance logging
Introduces a multi-state application flow (login, overview, dashboard) using React's useState hook in the App component. This refactors the application's entry point and removes the direct rendering of individual panels.

Enhances the LogTailPanel with improved audio alert management using useRef for AudioContext and adds visual indicators for muted states. It also introduces a new `LogLine` type for better log entry representation.

Adds a 'Clear Results' button to the LogQueryPanel for better user experience in clearing search queries.

Updates types.ts to include DiskPartition interface and removes the redundant disk property from SystemStats.

Introduces a CSS animation for flashing red backgrounds (`.animate-flash`) in index.html, intended for error indication.

Refactors SystemHealthPanel to remove the disk statistic and introduces an `errorKey` state to trigger animations on error occurrences, utilizing the new `.animate-flash` CSS class.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
       body {
         overscroll-behavior: none;
       }
+      @keyframes flash-red-bg {
+        0%, 100% {
+          background-color: transparent;
+        }
+        50% {
+          background-color: rgba(239, 68, 68, 0.4); /* red-500 at 40% opacity */
+        }
+      }
+      .animate-flash {
+        animation: flash-red-bg 700ms ease-in-out;
+      }
     </style>
   <script type="importmap">
 {
