feat: Adjust UI color scheme for better contrast
Invert background and panel colors to improve readability and visual distinction between the main application background and individual panels. This change enhances the user experience by providing clearer visual cues.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       :root {
-        --color-background: #ffffff; /* white */
-        --color-panel-bg: #f9fafb; /* gray-50 */
-        --color-panel-header: #f3f4f6; /* gray-100 */
+        --color-background: #f3f4f6; /* gray-100 */
+        --color-panel-bg: #ffffff; /* white */
+        --color-panel-header: #f9fafb; /* gray-50 */
         --color-border: #e5e7eb; /* gray-200 */
         --color-text-main: #111827; /* gray-900 */
         --color-text-secondary: #374151; /* gray-700 */
